# stardust-pets

./: .gitignore  DESIGN.md  LICENSE  README.en.md  README.md  TESTING.md  index.html  package-lock.json  package.json  panel.html  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src/config/: parts.json
src/debug/: rig-test.ts
src/engine/: frames.ts  lightEffects.ts  look.ts  particles.ts  petArt.ts  pixel.ts  renderer.ts  rig.ts
src/engine/species/: accessories.ts  cat.ts  generate.ts  index.ts  sharedAnims.ts
src/fsm/: machine.ts
src/llm/: client.ts  fallbackLines.ts  prompt.ts  tools.ts
src/panel/: panel.ts
src/systems/: currency.ts  db.ts  gacha.ts  intimacy.ts  intimacyCore.ts  memory.ts  petsRepo.ts  reminders.ts  shop.ts  windowSense.ts
src/ui/: overlay.ts
tests/: gacha.test.ts  generator.test.ts  intimacy.test.ts  reminders.test.ts
