[package]
name = "stardust-pets"
version = "0.2.0"
description = "AI desktop pet with collection gameplay"
edition = "2021"

[lib]
name = "stardust_pets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
active-win-pos-rs = "0.9"
user-idle = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = "s"
lto = true
